# domus

./: .gitignore  AGENTS.md  README.md
app/: pubspec.yaml
app/android/: build.gradle.kts  gradle.properties
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/app/domus/domus_app/: MainActivity.kt
app/ios/Runner/: AppDelegate.swift  Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  main.dart
app/lib/core/api/: api_client.dart
app/lib/core/router/: app_router.dart
app/lib/core/storage/: app_settings.dart
app/lib/core/theme/: app_theme.dart
app/lib/features/albums/data/: album_repository.dart
app/lib/features/albums/presentation/: album_detail_page.dart  albums_page.dart
app/lib/features/asset_viewer/data/: asset_repository.dart
app/lib/features/asset_viewer/presentation/: asset_viewer_page.dart
app/lib/features/auth/application/: auth_provider.dart
app/lib/features/auth/data/: auth_repository.dart  server_discovery.dart  server_discovery_io.dart  server_discovery_stub.dart
app/lib/features/auth/presentation/: login_page.dart
app/lib/features/backup/data/: backup_repository.dart  backup_settings.dart  backup_worker.dart
app/lib/features/backup/presentation/: backup_page.dart
app/lib/features/folders/data/: folder_repository.dart
app/lib/features/folders/presentation/: folders_page.dart
app/lib/features/memories/data/: memory_repository.dart
app/lib/features/memories/presentation/: memories_page.dart
app/lib/features/search/data/: map_repository.dart  search_repository.dart
app/lib/features/search/presentation/: global_map_page.dart  search_page.dart
app/lib/features/settings/data/: api_key_repository.dart  immich_derivative_repository.dart  partner_repository.dart  shared_link_repository.dart  system_config_repository.dart  user_admin_repository.dart
app/lib/features/settings/presentation/: immich_derivative_panel.dart  settings_page.dart
app/lib/features/shared/: immich_style.dart
app/lib/features/shell/: home_shell.dart
app/lib/features/tags/data/: tag_repository.dart
app/lib/features/timeline/application/: timeline_filter.dart  timeline_provider.dart
app/lib/features/timeline/data/: timeline_repository.dart
app/lib/features/timeline/presentation/: timeline_page.dart
app/lib/features/timeline/widgets/: asset_thumbnail.dart
app/lib/models/: album.dart  asset.dart  user.dart
app/test/: backup_settings_test.dart  smoke_test.dart  timeline_filter_test.dart
app/web/: index.html  manifest.json
docs/: BACKUP.md  IMMICH_TEST_PORTING.md  SYSTEM_DESIGN.md  api-endpoints-raw.md
scripts/: backfill_smart_search.py  backup_sqlite.sh  deploy.sh  domus-backup.sh  install-backup-systemd.sh  integration_smoke.sh  migrate_pg_to_sqlite.py
server/: Cargo.toml
server/crates/api/: Cargo.toml
server/crates/api/src/: dto.rs  error.rs  extractors.rs  lib.rs  state.rs  websocket.rs
server/crates/api/src/routes/: activities.rs  albums.rs  api_keys.rs  assets.rs  auth.rs  download.rs  duplicates.rs  faces.rs  immich_derivatives.rs  jobs.rs  libraries.rs  map.rs  memories.rs  mod.rs  notifications.rs  oauth.rs  partners.rs  people.rs  queues.rs  search.rs  server.rs  sessions.rs  shared_links.rs  stacks.rs  sync.rs  system_config.rs  system_metadata.rs  tags.rs  timeline.rs  trash.rs  users.rs  views.rs
server/crates/common/: Cargo.toml
server/crates/common/src/: config.rs  error.rs  lib.rs  types.rs  utils.rs
server/crates/db/: Cargo.toml
server/crates/db/migrations/: 0001_init.sql
server/crates/db/src/: entities.rs  lib.rs
server/crates/db/src/repositories/: activity.rs  album.rs  api_key.rs  asset.rs  job.rs  library.rs  memory.rs  mod.rs  notification.rs  partner.rs  search.rs  session.rs  shared_link.rs  stack.rs  sync.rs  system_metadata.rs  tag.rs  timeline.rs  user.rs
server/crates/domain/: Cargo.toml
server/crates/domain/src/: lib.rs
server/crates/domain/src/services/: activity.rs  album.rs  asset.rs  asset_media.rs  auth.rs  job_admin.rs  library.rs  memory.rs  mod.rs  notification.rs  partner.rs  search.rs  server.rs  shared_link.rs  stack.rs  sync.rs  system_config.rs  tag.rs  timeline.rs  trash.rs  user.rs
server/crates/jobs/: Cargo.toml
server/crates/jobs/src/: handlers.rs  lib.rs  queue.rs  types.rs  worker.rs
server/crates/media/: Cargo.toml
server/crates/media/src/: exif.rs  immich_derivatives.rs  lib.rs  storage.rs  thumbnail.rs  transcode.rs
server/crates/ml/: Cargo.toml
server/crates/ml/src/: lib.rs
server/crates/server/: Cargo.toml
server/crates/server/src/: main.rs
