[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/db",
    "crates/domain",
    "crates/api",
    "crates/jobs",
    "crates/media",
    "crates/ml",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/xiedeacc/domus"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# web
axum = { version = "0.8", features = ["multipart", "ws", "macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "compression-gzip", "set-header"] }
socketioxide = "0.17"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "uuid", "chrono", "json", "migrate"] }

# types
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"

# auth / crypto
bcrypt = "0.17"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.9"

# config / observability
figment = { version = "0.10", features = ["env", "json", "yaml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"

# misc
mime = "0.3"
mime_guess = "2"
tempfile = "3"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }

# internal crates
domus-common = { path = "crates/common" }
domus-db = { path = "crates/db" }
domus-domain = { path = "crates/domain" }
domus-api = { path = "crates/api" }
domus-jobs = { path = "crates/jobs" }
domus-media = { path = "crates/media" }
domus-ml = { path = "crates/ml" }

[profile.release]
lto = "thin"
strip = true
