[package]
name = "domus-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domus-common = { workspace = true }
domus-db = { workspace = true }
domus-domain = { workspace = true }
domus-jobs = { workspace = true }
domus-media = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
socketioxide = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true }
libc = { workspace = true }
