[package]
name = "domus-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domus-common = { workspace = true }
domus-db = { workspace = true }
domus-jobs = { workspace = true }
domus-media = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bcrypt = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
