[package]
name = "domus-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domus-common = { workspace = true }
domus-db = { workspace = true }
domus-media = { workspace = true }
domus-ml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
